--- a/index.html
+++ b/index.html
@@ -32,10 +32,36 @@
     #reader {
       width: 100%;
       max-width: 400px;
-      margin: 2rem auto;
+      margin: 1.5rem auto;
       border-radius: 12px;
       overflow: hidden;
       box-shadow: 0 0 20px rgba(0,255,128,0.2);
+    }
+
+    .controls {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    .btn {
+      padding: 0.75rem 1.5rem;
+      background-color: #10b981;
+      color: white;
+      border: none;
+      border-radius: 9999px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      width: 90%;
+      max-width: 400px;
+      margin: auto;
+      text-align: center;
+    }
+
+    .btn:hover {
+      background-color: #059669;
     }
 
     /* Modal Style */
@@ -66,23 +92,6 @@
       font-size: 1.1rem;
     }
 
-    .btn {
-      display: inline-block;
-      margin: 0.5rem;
-      padding: 0.8rem 1.5rem;
-      background-color: #10b981;
-      color: white;
-      border: none;
-      border-radius: 9999px;
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .btn:hover {
-      background-color: #059669;
-    }
-
     @keyframes popIn {
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
@@ -94,6 +103,11 @@
   <header>📷 QR Code Scanner</header>
 
   <div id="reader"></div>
+
+  <div class="controls">
+    <button class="btn" onclick="uploadImage()">📁 Upload from Gallery</button>
+    <input type="file" accept="image/*" id="image-input" style="display:none" />
+  </div>
 
   <!-- Modal Popup -->
   <div class="modal" id="popup">
@@ -135,7 +149,7 @@
       if (decodedText !== scannedText) {
         scannedText = decodedText;
         showPopup(decodedText);
-        html5QrcodeScanner.clear(); // stop camera
+        html5QrcodeScanner.clear();
       }
     }
 
@@ -169,9 +183,38 @@
       });
     }
 
-    // Tap outside modal to close
     document.getElementById("popup").addEventListener("click", function (e) {
       if (e.target.id === "popup") hidePopup();
+    });
+
+    // Handle image upload from gallery
+    function uploadImage() {
+      document.getElementById("image-input").click();
+    }
+
+    document.getElementById("image-input").addEventListener("change", function (e) {
+      const file = e.target.files[0];
+      if (!file) return;
+
+      html5QrcodeScanner.clear().then(() => {
+        const qrCode = new Html5Qrcode("reader");
+        qrCode.scanFile(file, true)
+          .then(decodedText => {
+            showPopup(decodedText);
+          })
+          .catch(err => {
+            alert("No QR code found in the image.");
+            console.error(err);
+            html5QrcodeScanner.start(
+              { facingMode: "environment" },
+              {
+                fps: 10,
+                qrbox: { width: 250, height: 250 }
+              },
+              onScanSuccess
+            );
+          });
+      });
     });
   </script>
 </body>
